feat:加入更新fishnote的測試案例，並產出fishnote更新時的api文件
